<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            style="@style/LightMeterApp.TextAppearance.LightReading"
            android:id="@+id/tv_light_reading"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/bg_light_reading"
            android:gravity="center"
            android:text="@string/format_light_reading"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:gravity="center|top">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <CheckBox
                        android:id="@+id/cb_iso"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/auto"
                        android:checked="false"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_iso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="false"
                        android:hint="@string/label_iso">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_iso"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:inputType="numberDecimal"
                            android:text="@string/format_iso"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <CheckBox
                        android:id="@+id/cb_time"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/auto"
                        android:checked="false"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="false"
                        android:hint="@string/label_time">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:inputType="numberDecimal"
                            android:enabled="true"
                            android:text="@string/format_time"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <CheckBox
                        android:id="@+id/cb_aperture"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/auto"
                        android:checked="false"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_aperture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="false"
                        android:hint="@string/label_aperture">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_aperture"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:inputType="numberDecimal"
                            android:enabled="true"
                            android:text="@string/format_aperture"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <CheckBox
                        android:id="@+id/cb_ec"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/auto"
                        android:checked="true"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_ec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="false"
                        android:hint="@string/label_ec">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_ec"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:inputType="numberDecimal"
                            android:enabled="false"
                            android:text="@string/format_ec"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    <TextView
        style="@style/LightMeterApp.Footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/footer"/>

</RelativeLayout>